# rust-users-service

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  models.rs  routes.rs  utils.rs
src/api/: routes.rs
src/database/: connection.rs
src/repository/: mod.rs  user_repository.rs  user_repository_mongo.rs
src/utils/: generate_random_string.rs  mod.rs
