[package]
name = "rust-users-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-users-service"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
mongodb = "2.1.0"
rand = "0.8.4"
anyhow = "1.0.35"